<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView1"
        android:layout_below="@+id/textView1"
        android:layout_marginTop="29dp"
        android:textSize="15dp"
        android:background="@color/verde"
        android:textColor="@color/rojo"
        android:onClick="legislacion"
        android:text="@string/leg" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView2"
        android:layout_below="@+id/textView2"
        android:layout_marginTop="14dp"
         android:textSize="15dp"
        android:background="@color/verde"
        android:textColor="@color/rojo"
        android:onClick="trabajo"
        android:text="@string/tra" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView3"
        android:layout_below="@+id/textView3"
        android:layout_marginTop="19dp"
         android:textSize="15dp"
        android:background="@color/verde"
        android:textColor="@color/rojo"
        android:onClick="proyecto"
        android:text="@string/pro" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView4"
        android:layout_below="@+id/textView4"
        android:layout_marginTop="22dp"
         android:textSize="15dp"
        android:background="@color/verde"
        android:textColor="@color/rojo"
        android:onClick="programacion"
        android:text="@string/web" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView6"
        android:layout_below="@+id/textView6"
        android:layout_marginTop="32dp"
         android:textSize="15dp"
        android:background="@color/verde"
        android:textColor="@color/rojo"
        android:onClick="aplicaciones"
        android:text="@string/apl" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView7"
        android:layout_below="@+id/textView7"
        android:layout_marginTop="28dp"
         android:textSize="15sp"
        android:background="@color/verde"
        android:textColor="@color/rojo"
        android:onClick="produccion"
        android:text="@string/prod" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:background="@color/amarillo"
       
        android:textColor="@color/rojo"
        android:textSize="20sp"
        android:text="@string/hello_world" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView5"
        android:layout_below="@+id/textView5"
        android:layout_marginTop="24dp"
        android:background="@color/verde"
        android:onClick="comercio"
        android:text="@string/com"
        android:textColor="@color/rojo"
        android:textSize="15dp" />

</RelativeLayout>
